ply/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> program
Rule 2     program -> blok
Rule 3     blok -> blok_deklaracji end blok_instrukcji end
Rule 4     blok -> end blok_instrukcji end
Rule 5     blok -> blok_deklaracji end end
Rule 6     blok -> end end
Rule 7     blok_deklaracji -> dek_funs
Rule 8     dek_funs -> <empty>
Rule 9     dek_funs -> dek_fun
Rule 10    dek_funs -> dek_fun dek_funs
Rule 11    dek_fun -> function var_sym identifier l_parenthesis arguments r_parenthesis instrukcjas return wyrazenie end
Rule 12    dek_fun -> function void identifier l_parenthesis arguments r_parenthesis instrukcjas end
Rule 13    arguments -> <empty>
Rule 14    arguments -> var_sym identifier
Rule 15    arguments -> var_sym identifier arguments
Rule 16    blok_instrukcji -> instrukcjas
Rule 17    instrukcjas -> <empty>
Rule 18    instrukcjas -> instrukcja
Rule 19    instrukcjas -> instrukcja instrukcjas
Rule 20    instrukcja -> instr_inicjuj end
Rule 21    instrukcja -> instr_podstaw end
Rule 22    instrukcja -> instr_wywolaj end
Rule 23    instrukcja -> instr_if end
Rule 24    instrukcja -> instr_while end
Rule 25    instrukcja -> instr_for end
Rule 26    instrukcja -> wypisz end
Rule 27    instrukcja -> instr_switch end
Rule 28    instr_inicjuj -> var_liczba_sym identifier assign liczba
Rule 29    instr_inicjuj -> var_liczba_sym identifier assign null
Rule 30    instr_inicjuj -> string identifier assign text
Rule 31    instr_inicjuj -> string identifier assign null
Rule 32    instr_podstaw -> identifier assign wyrazenie
Rule 33    instr_podstaw -> identifier assign null
Rule 34    instr_wywolaj -> call identifier l_parenthesis wyrazenies r_parenthesis
Rule 35    wyrazenies -> <empty>
Rule 36    wyrazenies -> wyrazenie
Rule 37    wyrazenies -> wyrazenie wyrazenies
Rule 38    instr_if -> if warunek then instrukcja instrukcjas
Rule 39    instr_if -> if warunek then instrukcja instrukcjas else instrukcja instrukcjas
Rule 40    instr_while -> while warunek do instrukcjas
Rule 41    instr_for -> for for_warunek do instrukcjas
Rule 42    wypisz -> print wyrazenie
Rule 43    wypisz -> print text
Rule 44    instr_switch -> switch l_parenthesis wyrazenie r_parenthesis case_blok case_bloks case_default
Rule 45    case_blok -> case l_parenthesis wyrazenie r_parenthesis then instrukcjas end
Rule 46    case_blok -> case l_parenthesis wyrazenie r_parenthesis then instrukcjas break end
Rule 47    case_default -> default then instrukcjas end
Rule 48    case_bloks -> <empty>
Rule 49    case_bloks -> case_blok
Rule 50    case_bloks -> case_blok case_bloks
Rule 51    var_sym -> var_liczba_sym
Rule 52    var_sym -> string
Rule 53    var_sym -> boolean
Rule 54    var_sym -> char
Rule 55    var_liczba_sym -> int
Rule 56    var_liczba_sym -> long
Rule 57    var_liczba_sym -> float
Rule 58    var_liczba_sym -> double
Rule 59    wyrazenie -> skladnik skladniks
Rule 60    wyrazenie -> true
Rule 61    wyrazenie -> false
Rule 62    wyrazenie -> text
Rule 63    skladnik -> czynnik czynniks
Rule 64    skladniks -> <empty>
Rule 65    skladniks -> oper_add skladnik
Rule 66    skladniks -> oper_add skladnik skladniks
Rule 67    oper_add -> plus
Rule 68    oper_add -> minus
Rule 69    oper_mul -> times
Rule 70    oper_mul -> divide
Rule 71    czynnik -> identifier
Rule 72    czynnik -> liczba
Rule 73    czynnik -> instr_wywolaj
Rule 74    czynnik -> wyr_w_naw
Rule 75    czynniks -> <empty>
Rule 76    czynniks -> oper_mul czynnik
Rule 77    czynniks -> oper_mul czynnik czynniks
Rule 78    liczba -> number_unsigned
Rule 79    liczba -> minus number_unsigned
Rule 80    wyr_w_naw -> l_parenthesis wyrazenie r_parenthesis
Rule 81    warunek -> warunek_prosty
Rule 82    warunek -> not warunek_prosty warunek_prostys
Rule 83    warunek_prosty -> wyrazenie oper_porownania wyrazenie
Rule 84    warunek_prostys -> <empty>
Rule 85    warunek_prostys -> oper_war warunek_prosty
Rule 86    warunek_prostys -> oper_war warunek_prosty warunek_prostys
Rule 87    oper_war -> and
Rule 88    oper_war -> or
Rule 89    oper_porownania -> equals
Rule 90    oper_porownania -> not_equals
Rule 91    oper_porownania -> greater
Rule 92    oper_porownania -> lower
Rule 93    oper_porownania -> greater_or_equal
Rule 94    oper_porownania -> lower_or_equal
Rule 95    not_equals -> not equals
Rule 96    for_warunek -> instr_inicjuj warunek_prosty instr_podstaw

Terminals, with rules where they appear

and                  : 87
assign               : 28 29 30 31 32 33
boolean              : 53
break                : 46
call                 : 34
case                 : 45 46
char                 : 54
default              : 47
divide               : 70
do                   : 40 41
double               : 58
else                 : 39
end                  : 3 3 4 4 5 5 6 6 11 12 20 21 22 23 24 25 26 27 45 46 47
equals               : 89 95
error                : 
false                : 61
float                : 57
for                  : 41
function             : 11 12
greater              : 91
greater_or_equal     : 93
identifier           : 11 12 14 15 28 29 30 31 32 33 34 71
if                   : 38 39
int                  : 55
l_parenthesis        : 11 12 34 44 45 46 80
long                 : 56
lower                : 92
lower_or_equal       : 94
minus                : 68 79
not                  : 82 95
null                 : 29 31 33
number_unsigned      : 78 79
or                   : 88
plus                 : 67
print                : 42 43
r_parenthesis        : 11 12 34 44 45 46 80
return               : 11
string               : 30 31 52
switch               : 44
text                 : 30 43 62
then                 : 38 39 45 46 47
times                : 69
true                 : 60
void                 : 12
while                : 40

Nonterminals, with rules where they appear

arguments            : 11 12 15
blok                 : 2
blok_deklaracji      : 3 5
blok_instrukcji      : 3 4
case_blok            : 44 49 50
case_bloks           : 44 50
case_default         : 44
czynnik              : 63 76 77
czynniks             : 63 77
dek_fun              : 9 10
dek_funs             : 7 10
for_warunek          : 41
instr_for            : 25
instr_if             : 23
instr_inicjuj        : 20 96
instr_podstaw        : 21 96
instr_switch         : 27
instr_while          : 24
instr_wywolaj        : 22 73
instrukcja           : 18 19 38 39 39
instrukcjas          : 11 12 16 19 38 39 39 40 41 45 46 47
liczba               : 28 72
not_equals           : 90
oper_add             : 65 66
oper_mul             : 76 77
oper_porownania      : 83
oper_war             : 85 86
program              : 1
skladnik             : 59 65 66
skladniks            : 59 66
start                : 0
var_liczba_sym       : 28 29 51
var_sym              : 11 14 15
warunek              : 38 39 40
warunek_prosty       : 81 82 85 86 96
warunek_prostys      : 82 86
wypisz               : 26
wyr_w_naw            : 74
wyrazenie            : 11 32 36 37 42 44 45 46 80 83 83
wyrazenies           : 34 37

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . program
    (2) program -> . blok
    (3) blok -> . blok_deklaracji end blok_instrukcji end
    (4) blok -> . end blok_instrukcji end
    (5) blok -> . blok_deklaracji end end
    (6) blok -> . end end
    (7) blok_deklaracji -> . dek_funs
    (8) dek_funs -> .
    (9) dek_funs -> . dek_fun
    (10) dek_funs -> . dek_fun dek_funs
    (11) dek_fun -> . function var_sym identifier l_parenthesis arguments r_parenthesis instrukcjas return wyrazenie end
    (12) dek_fun -> . function void identifier l_parenthesis arguments r_parenthesis instrukcjas end

  ! shift/reduce conflict for end resolved as shift
    end             shift and go to state 5
    function        shift and go to state 8

  ! end             [ reduce using rule 8 (dek_funs -> .) ]

    start                          shift and go to state 1
    program                        shift and go to state 2
    blok                           shift and go to state 3
    blok_deklaracji                shift and go to state 4
    dek_funs                       shift and go to state 6
    dek_fun                        shift and go to state 7

state 1

    (0) S' -> start .



state 2

    (1) start -> program .

    $end            reduce using rule 1 (start -> program .)


state 3

    (2) program -> blok .

    $end            reduce using rule 2 (program -> blok .)


state 4

    (3) blok -> blok_deklaracji . end blok_instrukcji end
    (5) blok -> blok_deklaracji . end end

    end             shift and go to state 9


state 5

    (4) blok -> end . blok_instrukcji end
    (6) blok -> end . end
    (16) blok_instrukcji -> . instrukcjas
    (17) instrukcjas -> .
    (18) instrukcjas -> . instrukcja
    (19) instrukcjas -> . instrukcja instrukcjas
    (20) instrukcja -> . instr_inicjuj end
    (21) instrukcja -> . instr_podstaw end
    (22) instrukcja -> . instr_wywolaj end
    (23) instrukcja -> . instr_if end
    (24) instrukcja -> . instr_while end
    (25) instrukcja -> . instr_for end
    (26) instrukcja -> . wypisz end
    (27) instrukcja -> . instr_switch end
    (28) instr_inicjuj -> . var_liczba_sym identifier assign liczba
    (29) instr_inicjuj -> . var_liczba_sym identifier assign null
    (30) instr_inicjuj -> . string identifier assign text
    (31) instr_inicjuj -> . string identifier assign null
    (32) instr_podstaw -> . identifier assign wyrazenie
    (33) instr_podstaw -> . identifier assign null
    (34) instr_wywolaj -> . call identifier l_parenthesis wyrazenies r_parenthesis
    (38) instr_if -> . if warunek then instrukcja instrukcjas
    (39) instr_if -> . if warunek then instrukcja instrukcjas else instrukcja instrukcjas
    (40) instr_while -> . while warunek do instrukcjas
    (41) instr_for -> . for for_warunek do instrukcjas
    (42) wypisz -> . print wyrazenie
    (43) wypisz -> . print text
    (44) instr_switch -> . switch l_parenthesis wyrazenie r_parenthesis case_blok case_bloks case_default
    (55) var_liczba_sym -> . int
    (56) var_liczba_sym -> . long
    (57) var_liczba_sym -> . float
    (58) var_liczba_sym -> . double

  ! shift/reduce conflict for end resolved as shift
    end             shift and go to state 10
    string          shift and go to state 24
    identifier      shift and go to state 23
    call            shift and go to state 25
    if              shift and go to state 26
    while           shift and go to state 27
    for             shift and go to state 28
    print           shift and go to state 29
    switch          shift and go to state 30
    int             shift and go to state 31
    long            shift and go to state 32
    float           shift and go to state 33
    double          shift and go to state 34

  ! end             [ reduce using rule 17 (instrukcjas -> .) ]

    blok_instrukcji                shift and go to state 11
    instrukcjas                    shift and go to state 12
    instrukcja                     shift and go to state 13
    instr_inicjuj                  shift and go to state 14
    instr_podstaw                  shift and go to state 15
    instr_wywolaj                  shift and go to state 16
    instr_if                       shift and go to state 17
    instr_while                    shift and go to state 18
    instr_for                      shift and go to state 19
    wypisz                         shift and go to state 20
    instr_switch                   shift and go to state 21
    var_liczba_sym                 shift and go to state 22

state 6

    (7) blok_deklaracji -> dek_funs .

    end             reduce using rule 7 (blok_deklaracji -> dek_funs .)


state 7

    (9) dek_funs -> dek_fun .
    (10) dek_funs -> dek_fun . dek_funs
    (8) dek_funs -> .
    (9) dek_funs -> . dek_fun
    (10) dek_funs -> . dek_fun dek_funs
    (11) dek_fun -> . function var_sym identifier l_parenthesis arguments r_parenthesis instrukcjas return wyrazenie end
    (12) dek_fun -> . function void identifier l_parenthesis arguments r_parenthesis instrukcjas end

  ! reduce/reduce conflict for end resolved using rule 8 (dek_funs -> .)
    end             reduce using rule 8 (dek_funs -> .)
    function        shift and go to state 8

  ! end             [ reduce using rule 9 (dek_funs -> dek_fun .) ]

    dek_fun                        shift and go to state 7
    dek_funs                       shift and go to state 35

state 8

    (11) dek_fun -> function . var_sym identifier l_parenthesis arguments r_parenthesis instrukcjas return wyrazenie end
    (12) dek_fun -> function . void identifier l_parenthesis arguments r_parenthesis instrukcjas end
    (51) var_sym -> . var_liczba_sym
    (52) var_sym -> . string
    (53) var_sym -> . boolean
    (54) var_sym -> . char
    (55) var_liczba_sym -> . int
    (56) var_liczba_sym -> . long
    (57) var_liczba_sym -> . float
    (58) var_liczba_sym -> . double

    void            shift and go to state 37
    string          shift and go to state 39
    boolean         shift and go to state 40
    char            shift and go to state 41
    int             shift and go to state 31
    long            shift and go to state 32
    float           shift and go to state 33
    double          shift and go to state 34

    var_sym                        shift and go to state 36
    var_liczba_sym                 shift and go to state 38

state 9

    (3) blok -> blok_deklaracji end . blok_instrukcji end
    (5) blok -> blok_deklaracji end . end
    (16) blok_instrukcji -> . instrukcjas
    (17) instrukcjas -> .
    (18) instrukcjas -> . instrukcja
    (19) instrukcjas -> . instrukcja instrukcjas
    (20) instrukcja -> . instr_inicjuj end
    (21) instrukcja -> . instr_podstaw end
    (22) instrukcja -> . instr_wywolaj end
    (23) instrukcja -> . instr_if end
    (24) instrukcja -> . instr_while end
    (25) instrukcja -> . instr_for end
    (26) instrukcja -> . wypisz end
    (27) instrukcja -> . instr_switch end
    (28) instr_inicjuj -> . var_liczba_sym identifier assign liczba
    (29) instr_inicjuj -> . var_liczba_sym identifier assign null
    (30) instr_inicjuj -> . string identifier assign text
    (31) instr_inicjuj -> . string identifier assign null
    (32) instr_podstaw -> . identifier assign wyrazenie
    (33) instr_podstaw -> . identifier assign null
    (34) instr_wywolaj -> . call identifier l_parenthesis wyrazenies r_parenthesis
    (38) instr_if -> . if warunek then instrukcja instrukcjas
    (39) instr_if -> . if warunek then instrukcja instrukcjas else instrukcja instrukcjas
    (40) instr_while -> . while warunek do instrukcjas
    (41) instr_for -> . for for_warunek do instrukcjas
    (42) wypisz -> . print wyrazenie
    (43) wypisz -> . print text
    (44) instr_switch -> . switch l_parenthesis wyrazenie r_parenthesis case_blok case_bloks case_default
    (55) var_liczba_sym -> . int
    (56) var_liczba_sym -> . long
    (57) var_liczba_sym -> . float
    (58) var_liczba_sym -> . double

  ! shift/reduce conflict for end resolved as shift
    end             shift and go to state 42
    string          shift and go to state 24
    identifier      shift and go to state 23
    call            shift and go to state 25
    if              shift and go to state 26
    while           shift and go to state 27
    for             shift and go to state 28
    print           shift and go to state 29
    switch          shift and go to state 30
    int             shift and go to state 31
    long            shift and go to state 32
    float           shift and go to state 33
    double          shift and go to state 34

  ! end             [ reduce using rule 17 (instrukcjas -> .) ]

    blok_instrukcji                shift and go to state 43
    instrukcjas                    shift and go to state 12
    instrukcja                     shift and go to state 13
    instr_inicjuj                  shift and go to state 14
    instr_podstaw                  shift and go to state 15
    instr_wywolaj                  shift and go to state 16
    instr_if                       shift and go to state 17
    instr_while                    shift and go to state 18
    instr_for                      shift and go to state 19
    wypisz                         shift and go to state 20
    instr_switch                   shift and go to state 21
    var_liczba_sym                 shift and go to state 22

state 10

    (6) blok -> end end .

    $end            reduce using rule 6 (blok -> end end .)


state 11

    (4) blok -> end blok_instrukcji . end

    end             shift and go to state 44


state 12

    (16) blok_instrukcji -> instrukcjas .

    end             reduce using rule 16 (blok_instrukcji -> instrukcjas .)


state 13

    (18) instrukcjas -> instrukcja .
    (19) instrukcjas -> instrukcja . instrukcjas
    (17) instrukcjas -> .
    (18) instrukcjas -> . instrukcja
    (19) instrukcjas -> . instrukcja instrukcjas
    (20) instrukcja -> . instr_inicjuj end
    (21) instrukcja -> . instr_podstaw end
    (22) instrukcja -> . instr_wywolaj end
    (23) instrukcja -> . instr_if end
    (24) instrukcja -> . instr_while end
    (25) instrukcja -> . instr_for end
    (26) instrukcja -> . wypisz end
    (27) instrukcja -> . instr_switch end
    (28) instr_inicjuj -> . var_liczba_sym identifier assign liczba
    (29) instr_inicjuj -> . var_liczba_sym identifier assign null
    (30) instr_inicjuj -> . string identifier assign text
    (31) instr_inicjuj -> . string identifier assign null
    (32) instr_podstaw -> . identifier assign wyrazenie
    (33) instr_podstaw -> . identifier assign null
    (34) instr_wywolaj -> . call identifier l_parenthesis wyrazenies r_parenthesis
    (38) instr_if -> . if warunek then instrukcja instrukcjas
    (39) instr_if -> . if warunek then instrukcja instrukcjas else instrukcja instrukcjas
    (40) instr_while -> . while warunek do instrukcjas
    (41) instr_for -> . for for_warunek do instrukcjas
    (42) wypisz -> . print wyrazenie
    (43) wypisz -> . print text
    (44) instr_switch -> . switch l_parenthesis wyrazenie r_parenthesis case_blok case_bloks case_default
    (55) var_liczba_sym -> . int
    (56) var_liczba_sym -> . long
    (57) var_liczba_sym -> . float
    (58) var_liczba_sym -> . double

  ! reduce/reduce conflict for end resolved using rule 17 (instrukcjas -> .)
  ! reduce/reduce conflict for else resolved using rule 17 (instrukcjas -> .)
  ! reduce/reduce conflict for return resolved using rule 17 (instrukcjas -> .)
  ! reduce/reduce conflict for break resolved using rule 17 (instrukcjas -> .)
    end             reduce using rule 17 (instrukcjas -> .)
    else            reduce using rule 17 (instrukcjas -> .)
    return          reduce using rule 17 (instrukcjas -> .)
    break           reduce using rule 17 (instrukcjas -> .)
    string          shift and go to state 24
    identifier      shift and go to state 23
    call            shift and go to state 25
    if              shift and go to state 26
    while           shift and go to state 27
    for             shift and go to state 28
    print           shift and go to state 29
    switch          shift and go to state 30
    int             shift and go to state 31
    long            shift and go to state 32
    float           shift and go to state 33
    double          shift and go to state 34

  ! end             [ reduce using rule 18 (instrukcjas -> instrukcja .) ]
  ! else            [ reduce using rule 18 (instrukcjas -> instrukcja .) ]
  ! return          [ reduce using rule 18 (instrukcjas -> instrukcja .) ]
  ! break           [ reduce using rule 18 (instrukcjas -> instrukcja .) ]

    instrukcja                     shift and go to state 13
    instrukcjas                    shift and go to state 45
    instr_inicjuj                  shift and go to state 14
    instr_podstaw                  shift and go to state 15
    instr_wywolaj                  shift and go to state 16
    instr_if                       shift and go to state 17
    instr_while                    shift and go to state 18
    instr_for                      shift and go to state 19
    wypisz                         shift and go to state 20
    instr_switch                   shift and go to state 21
    var_liczba_sym                 shift and go to state 22

state 14

    (20) instrukcja -> instr_inicjuj . end

    end             shift and go to state 46


state 15

    (21) instrukcja -> instr_podstaw . end

    end             shift and go to state 47


state 16

    (22) instrukcja -> instr_wywolaj . end

    end             shift and go to state 48


state 17

    (23) instrukcja -> instr_if . end

    end             shift and go to state 49


state 18

    (24) instrukcja -> instr_while . end

    end             shift and go to state 50


state 19

    (25) instrukcja -> instr_for . end

    end             shift and go to state 51


state 20

    (26) instrukcja -> wypisz . end

    end             shift and go to state 52


state 21

    (27) instrukcja -> instr_switch . end

    end             shift and go to state 53


state 22

    (28) instr_inicjuj -> var_liczba_sym . identifier assign liczba
    (29) instr_inicjuj -> var_liczba_sym . identifier assign null

    identifier      shift and go to state 54


state 23

    (32) instr_podstaw -> identifier . assign wyrazenie
    (33) instr_podstaw -> identifier . assign null

    assign          shift and go to state 55


state 24

    (30) instr_inicjuj -> string . identifier assign text
    (31) instr_inicjuj -> string . identifier assign null

    identifier      shift and go to state 56


state 25

    (34) instr_wywolaj -> call . identifier l_parenthesis wyrazenies r_parenthesis

    identifier      shift and go to state 57


state 26

    (38) instr_if -> if . warunek then instrukcja instrukcjas
    (39) instr_if -> if . warunek then instrukcja instrukcjas else instrukcja instrukcjas
    (81) warunek -> . warunek_prosty
    (82) warunek -> . not warunek_prosty warunek_prostys
    (83) warunek_prosty -> . wyrazenie oper_porownania wyrazenie
    (59) wyrazenie -> . skladnik skladniks
    (60) wyrazenie -> . true
    (61) wyrazenie -> . false
    (62) wyrazenie -> . text
    (63) skladnik -> . czynnik czynniks
    (71) czynnik -> . identifier
    (72) czynnik -> . liczba
    (73) czynnik -> . instr_wywolaj
    (74) czynnik -> . wyr_w_naw
    (78) liczba -> . number_unsigned
    (79) liczba -> . minus number_unsigned
    (34) instr_wywolaj -> . call identifier l_parenthesis wyrazenies r_parenthesis
    (80) wyr_w_naw -> . l_parenthesis wyrazenie r_parenthesis

    not             shift and go to state 60
    true            shift and go to state 63
    false           shift and go to state 64
    text            shift and go to state 65
    identifier      shift and go to state 67
    number_unsigned shift and go to state 71
    minus           shift and go to state 72
    call            shift and go to state 25
    l_parenthesis   shift and go to state 73

    warunek                        shift and go to state 58
    warunek_prosty                 shift and go to state 59
    wyrazenie                      shift and go to state 61
    skladnik                       shift and go to state 62
    czynnik                        shift and go to state 66
    liczba                         shift and go to state 68
    instr_wywolaj                  shift and go to state 69
    wyr_w_naw                      shift and go to state 70

state 27

    (40) instr_while -> while . warunek do instrukcjas
    (81) warunek -> . warunek_prosty
    (82) warunek -> . not warunek_prosty warunek_prostys
    (83) warunek_prosty -> . wyrazenie oper_porownania wyrazenie
    (59) wyrazenie -> . skladnik skladniks
    (60) wyrazenie -> . true
    (61) wyrazenie -> . false
    (62) wyrazenie -> . text
    (63) skladnik -> . czynnik czynniks
    (71) czynnik -> . identifier
    (72) czynnik -> . liczba
    (73) czynnik -> . instr_wywolaj
    (74) czynnik -> . wyr_w_naw
    (78) liczba -> . number_unsigned
    (79) liczba -> . minus number_unsigned
    (34) instr_wywolaj -> . call identifier l_parenthesis wyrazenies r_parenthesis
    (80) wyr_w_naw -> . l_parenthesis wyrazenie r_parenthesis

    not             shift and go to state 60
    true            shift and go to state 63
    false           shift and go to state 64
    text            shift and go to state 65
    identifier      shift and go to state 67
    number_unsigned shift and go to state 71
    minus           shift and go to state 72
    call            shift and go to state 25
    l_parenthesis   shift and go to state 73

    warunek                        shift and go to state 74
    warunek_prosty                 shift and go to state 59
    wyrazenie                      shift and go to state 61
    skladnik                       shift and go to state 62
    czynnik                        shift and go to state 66
    liczba                         shift and go to state 68
    instr_wywolaj                  shift and go to state 69
    wyr_w_naw                      shift and go to state 70

state 28

    (41) instr_for -> for . for_warunek do instrukcjas
    (96) for_warunek -> . instr_inicjuj warunek_prosty instr_podstaw
    (28) instr_inicjuj -> . var_liczba_sym identifier assign liczba
    (29) instr_inicjuj -> . var_liczba_sym identifier assign null
    (30) instr_inicjuj -> . string identifier assign text
    (31) instr_inicjuj -> . string identifier assign null
    (55) var_liczba_sym -> . int
    (56) var_liczba_sym -> . long
    (57) var_liczba_sym -> . float
    (58) var_liczba_sym -> . double

    string          shift and go to state 24
    int             shift and go to state 31
    long            shift and go to state 32
    float           shift and go to state 33
    double          shift and go to state 34

    for_warunek                    shift and go to state 75
    instr_inicjuj                  shift and go to state 76
    var_liczba_sym                 shift and go to state 22

state 29

    (42) wypisz -> print . wyrazenie
    (43) wypisz -> print . text
    (59) wyrazenie -> . skladnik skladniks
    (60) wyrazenie -> . true
    (61) wyrazenie -> . false
    (62) wyrazenie -> . text
    (63) skladnik -> . czynnik czynniks
    (71) czynnik -> . identifier
    (72) czynnik -> . liczba
    (73) czynnik -> . instr_wywolaj
    (74) czynnik -> . wyr_w_naw
    (78) liczba -> . number_unsigned
    (79) liczba -> . minus number_unsigned
    (34) instr_wywolaj -> . call identifier l_parenthesis wyrazenies r_parenthesis
    (80) wyr_w_naw -> . l_parenthesis wyrazenie r_parenthesis

    text            shift and go to state 78
    true            shift and go to state 63
    false           shift and go to state 64
    identifier      shift and go to state 67
    number_unsigned shift and go to state 71
    minus           shift and go to state 72
    call            shift and go to state 25
    l_parenthesis   shift and go to state 73

    wyrazenie                      shift and go to state 77
    skladnik                       shift and go to state 62
    czynnik                        shift and go to state 66
    liczba                         shift and go to state 68
    instr_wywolaj                  shift and go to state 69
    wyr_w_naw                      shift and go to state 70

state 30

    (44) instr_switch -> switch . l_parenthesis wyrazenie r_parenthesis case_blok case_bloks case_default

    l_parenthesis   shift and go to state 79


state 31

    (55) var_liczba_sym -> int .

    identifier      reduce using rule 55 (var_liczba_sym -> int .)


state 32

    (56) var_liczba_sym -> long .

    identifier      reduce using rule 56 (var_liczba_sym -> long .)


state 33

    (57) var_liczba_sym -> float .

    identifier      reduce using rule 57 (var_liczba_sym -> float .)


state 34

    (58) var_liczba_sym -> double .

    identifier      reduce using rule 58 (var_liczba_sym -> double .)


state 35

    (10) dek_funs -> dek_fun dek_funs .

    end             reduce using rule 10 (dek_funs -> dek_fun dek_funs .)


state 36

    (11) dek_fun -> function var_sym . identifier l_parenthesis arguments r_parenthesis instrukcjas return wyrazenie end

    identifier      shift and go to state 80


state 37

    (12) dek_fun -> function void . identifier l_parenthesis arguments r_parenthesis instrukcjas end

    identifier      shift and go to state 81


state 38

    (51) var_sym -> var_liczba_sym .

    identifier      reduce using rule 51 (var_sym -> var_liczba_sym .)


state 39

    (52) var_sym -> string .

    identifier      reduce using rule 52 (var_sym -> string .)


state 40

    (53) var_sym -> boolean .

    identifier      reduce using rule 53 (var_sym -> boolean .)


state 41

    (54) var_sym -> char .

    identifier      reduce using rule 54 (var_sym -> char .)


state 42

    (5) blok -> blok_deklaracji end end .

    $end            reduce using rule 5 (blok -> blok_deklaracji end end .)


state 43

    (3) blok -> blok_deklaracji end blok_instrukcji . end

    end             shift and go to state 82


state 44

    (4) blok -> end blok_instrukcji end .

    $end            reduce using rule 4 (blok -> end blok_instrukcji end .)


state 45

    (19) instrukcjas -> instrukcja instrukcjas .

    end             reduce using rule 19 (instrukcjas -> instrukcja instrukcjas .)
    else            reduce using rule 19 (instrukcjas -> instrukcja instrukcjas .)
    return          reduce using rule 19 (instrukcjas -> instrukcja instrukcjas .)
    break           reduce using rule 19 (instrukcjas -> instrukcja instrukcjas .)


state 46

    (20) instrukcja -> instr_inicjuj end .

    string          reduce using rule 20 (instrukcja -> instr_inicjuj end .)
    identifier      reduce using rule 20 (instrukcja -> instr_inicjuj end .)
    call            reduce using rule 20 (instrukcja -> instr_inicjuj end .)
    if              reduce using rule 20 (instrukcja -> instr_inicjuj end .)
    while           reduce using rule 20 (instrukcja -> instr_inicjuj end .)
    for             reduce using rule 20 (instrukcja -> instr_inicjuj end .)
    print           reduce using rule 20 (instrukcja -> instr_inicjuj end .)
    switch          reduce using rule 20 (instrukcja -> instr_inicjuj end .)
    int             reduce using rule 20 (instrukcja -> instr_inicjuj end .)
    long            reduce using rule 20 (instrukcja -> instr_inicjuj end .)
    float           reduce using rule 20 (instrukcja -> instr_inicjuj end .)
    double          reduce using rule 20 (instrukcja -> instr_inicjuj end .)
    end             reduce using rule 20 (instrukcja -> instr_inicjuj end .)
    else            reduce using rule 20 (instrukcja -> instr_inicjuj end .)
    return          reduce using rule 20 (instrukcja -> instr_inicjuj end .)
    break           reduce using rule 20 (instrukcja -> instr_inicjuj end .)


state 47

    (21) instrukcja -> instr_podstaw end .

    string          reduce using rule 21 (instrukcja -> instr_podstaw end .)
    identifier      reduce using rule 21 (instrukcja -> instr_podstaw end .)
    call            reduce using rule 21 (instrukcja -> instr_podstaw end .)
    if              reduce using rule 21 (instrukcja -> instr_podstaw end .)
    while           reduce using rule 21 (instrukcja -> instr_podstaw end .)
    for             reduce using rule 21 (instrukcja -> instr_podstaw end .)
    print           reduce using rule 21 (instrukcja -> instr_podstaw end .)
    switch          reduce using rule 21 (instrukcja -> instr_podstaw end .)
    int             reduce using rule 21 (instrukcja -> instr_podstaw end .)
    long            reduce using rule 21 (instrukcja -> instr_podstaw end .)
    float           reduce using rule 21 (instrukcja -> instr_podstaw end .)
    double          reduce using rule 21 (instrukcja -> instr_podstaw end .)
    end             reduce using rule 21 (instrukcja -> instr_podstaw end .)
    else            reduce using rule 21 (instrukcja -> instr_podstaw end .)
    return          reduce using rule 21 (instrukcja -> instr_podstaw end .)
    break           reduce using rule 21 (instrukcja -> instr_podstaw end .)


state 48

    (22) instrukcja -> instr_wywolaj end .

    string          reduce using rule 22 (instrukcja -> instr_wywolaj end .)
    identifier      reduce using rule 22 (instrukcja -> instr_wywolaj end .)
    call            reduce using rule 22 (instrukcja -> instr_wywolaj end .)
    if              reduce using rule 22 (instrukcja -> instr_wywolaj end .)
    while           reduce using rule 22 (instrukcja -> instr_wywolaj end .)
    for             reduce using rule 22 (instrukcja -> instr_wywolaj end .)
    print           reduce using rule 22 (instrukcja -> instr_wywolaj end .)
    switch          reduce using rule 22 (instrukcja -> instr_wywolaj end .)
    int             reduce using rule 22 (instrukcja -> instr_wywolaj end .)
    long            reduce using rule 22 (instrukcja -> instr_wywolaj end .)
    float           reduce using rule 22 (instrukcja -> instr_wywolaj end .)
    double          reduce using rule 22 (instrukcja -> instr_wywolaj end .)
    end             reduce using rule 22 (instrukcja -> instr_wywolaj end .)
    else            reduce using rule 22 (instrukcja -> instr_wywolaj end .)
    return          reduce using rule 22 (instrukcja -> instr_wywolaj end .)
    break           reduce using rule 22 (instrukcja -> instr_wywolaj end .)


state 49

    (23) instrukcja -> instr_if end .

    string          reduce using rule 23 (instrukcja -> instr_if end .)
    identifier      reduce using rule 23 (instrukcja -> instr_if end .)
    call            reduce using rule 23 (instrukcja -> instr_if end .)
    if              reduce using rule 23 (instrukcja -> instr_if end .)
    while           reduce using rule 23 (instrukcja -> instr_if end .)
    for             reduce using rule 23 (instrukcja -> instr_if end .)
    print           reduce using rule 23 (instrukcja -> instr_if end .)
    switch          reduce using rule 23 (instrukcja -> instr_if end .)
    int             reduce using rule 23 (instrukcja -> instr_if end .)
    long            reduce using rule 23 (instrukcja -> instr_if end .)
    float           reduce using rule 23 (instrukcja -> instr_if end .)
    double          reduce using rule 23 (instrukcja -> instr_if end .)
    end             reduce using rule 23 (instrukcja -> instr_if end .)
    else            reduce using rule 23 (instrukcja -> instr_if end .)
    return          reduce using rule 23 (instrukcja -> instr_if end .)
    break           reduce using rule 23 (instrukcja -> instr_if end .)


state 50

    (24) instrukcja -> instr_while end .

    string          reduce using rule 24 (instrukcja -> instr_while end .)
    identifier      reduce using rule 24 (instrukcja -> instr_while end .)
    call            reduce using rule 24 (instrukcja -> instr_while end .)
    if              reduce using rule 24 (instrukcja -> instr_while end .)
    while           reduce using rule 24 (instrukcja -> instr_while end .)
    for             reduce using rule 24 (instrukcja -> instr_while end .)
    print           reduce using rule 24 (instrukcja -> instr_while end .)
    switch          reduce using rule 24 (instrukcja -> instr_while end .)
    int             reduce using rule 24 (instrukcja -> instr_while end .)
    long            reduce using rule 24 (instrukcja -> instr_while end .)
    float           reduce using rule 24 (instrukcja -> instr_while end .)
    double          reduce using rule 24 (instrukcja -> instr_while end .)
    end             reduce using rule 24 (instrukcja -> instr_while end .)
    else            reduce using rule 24 (instrukcja -> instr_while end .)
    return          reduce using rule 24 (instrukcja -> instr_while end .)
    break           reduce using rule 24 (instrukcja -> instr_while end .)


state 51

    (25) instrukcja -> instr_for end .

    string          reduce using rule 25 (instrukcja -> instr_for end .)
